Fixed padding on table on small screen

--- a/src/components/DataTable/DataTable.css
+++ b/src/components/DataTable/DataTable.css
@@ -52,6 +52,10 @@
 }
 
 @media all and (max-width: 636px) {
+  .data-table {
+    padding: 0;
+  }
+
   .data-table td.hide-for-small,
   .data-table th.hide-for-small {
     display: none;
